attempt to fix css not showing up on pages

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     color: #ffffff;
     text-align: center;
     padding: 50px;
+    text-shadow: 1px 1px 10px #000000;
 }
 
 .content h1 {
